fixed overflow-x for whites-space

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html,body{
-  width:fit-content
-} */
+html,
+body {
+  overflow-x: hidden;
+}
 
 .react-calendar {
   margin: 0 auto;
@@ -42,14 +43,15 @@
 
 .mission-img {
   background-image: url("src/assets/images/photo school kid100.jpg");
+  /* height: 600px; */
+  width: 100%;
   object-fit: cover;
-  background-size: cover;
+  background-size: 100%;
   background-blend-mode: soft-light;
   background-color: rgba(15, 56, 118, 0.8);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* opacity:1 */
 }
 
 .first-container {
@@ -65,11 +67,6 @@
   background-size: cover;
 }
 
-.partner {
-  height: 30vh;
-  background-color: darkgray;
-}
-
 /* ................academics................ */
 
 .academic-container {
@@ -77,7 +74,15 @@
   height: 600px;
   width: 100%;
   object-fit: cover;
-  background-size: cover;
+  background-size: 100%;
   background-blend-mode: soft-light;
   background-color: rgba(15, 56, 118, 0.8);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.partner {
+  height: 30vh;
+  background-color: darkgray;
 }
